--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -102,5 +102,9 @@ input {
 
 form radio-inline{
   display: inline-block;
-  margin-right: 25px;
+  margin-right: 10px;
+  padding-left: 10px;
+}
+div.radio-inline{
+  padding-left: 0px;
 }
