--- a/app/views/opinions/_form.html.erb
+++ b/app/views/opinions/_form.html.erb
@@ -2,22 +2,33 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@newopinion) do |f| %>
       <%= render 'shared/error_messages' %>
-      <%= f.label 'タイトル' %>
-      <%= f.text_field :title %>
-      
       <div class="form-group">
-        <%= f.label 'カテゴリ' %>
+        <label>タイトル</label>
+        <%= f.text_field :title %>
+      </div>
+      <div class="form-group">
+        <label>カテゴリ</label><br>
         <div class="radio-inline">
-          <%= f.radio_button :category, :life %>
-        <%= f.label :category, "生活", {value: :life, style: "display: inline-block;"} %>
+          <label><%= f.radio_button :category, :life %>生活</label>
         </div>
         <div class="radio-inline">
-          <%= f.radio_button :category, :study %>
-        <%= f.label :category, "学業", {value: :study, style: "display: inline-block;"} %>
+          <label><%= f.radio_button :category, :study %>学業</label>
+        </div>
+        <div class="radio-inline">
+          <label><%= f.radio_button :category, :club %>部活</label>
+        </div>
+        <div class="radio-inline">
+          <label><%= f.radio_button :category, :guidance %>進路</label>
+        </div>
+        <div class="radio-inline">
+          <label><%= f.radio_button :category, :other %>その他</label>
         </div>
       </div>
-      <%= f.label '本文' %>
-      <%= f.text_area :text %>
+      <div class="form-group">
+        <label>本文</label>
+        <%= f.text_area :text %>
+      </div>
+      
 
       <%= f.submit "投稿する", class: "btn btn-primary" %>
     <% end %>
