--- a/app/views/opinions/_form.html.erb
+++ b/app/views/opinions/_form.html.erb
@@ -9,19 +9,19 @@
       <div class="form-group">
         <label>カテゴリ</label><br>
         <div class="radio-inline">
-          <label><%= f.radio_button :category, :life %>生活</label>
+          <label><%= f.radio_button :category, "生活", {:checked => true} %>生活</label>
         </div>
         <div class="radio-inline">
-          <label><%= f.radio_button :category, :study %>学業</label>
+          <label><%= f.radio_button :category, "学業" %>学業</label>
         </div>
         <div class="radio-inline">
-          <label><%= f.radio_button :category, :club %>部活</label>
+          <label><%= f.radio_button :category, "部活" %>部活</label>
         </div>
         <div class="radio-inline">
-          <label><%= f.radio_button :category, :guidance %>進路</label>
+          <label><%= f.radio_button :category, "進路" %>進路</label>
         </div>
         <div class="radio-inline">
-          <label><%= f.radio_button :category, :other %>その他</label>
+          <label><%= f.radio_button :category, "その他" %>その他</label>
         </div>
       </div>
       <div class="form-group">
