--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,84 @@
  *= require_tree .
  *= require_self
  */
+ 
+body{
+    margin: 0;
+    padding: 0;
+}
+/* header */
+header {
+  margin-top: 0px;
+  background-color: #FFAD90;
+  display:flex;
+  justify-content:center;
+  
+}
+nav{
+    overflow: hidden;
+    width:97%;
+}
+#logo{
+    width:18%;
+    font-family: sans-serif;
+}
+
+nav li{
+    width:16%;
+    text-align: center;
+    float: left;
+    height: 50px;
+    list-style: none;
+    font-size: 20px;
+}
+nav li a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    padding:30px;
+}
+
+
+.header-title-area {
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.logo {
+  font-size: 32px;
+}
+.text-sub {
+  color: #777;
+}
+
+/*main*/
+
+
+.container {
+  width: 97%;
+  margin: 0 auto 40px auto;
+}
+h1{
+  text-align: center;
+}
+
+/*form*/
+.form{
+  margin:10px auto;
+  width: 70%;
+}
+.form-group{
+　padding:20px;
+　margin:10px auto;
+}
+
+label {
+　　grid-column: 1 / 2;
+}
+
+input, button {
+　　grid-column: 2 / 3;
+}
+#opinion_title,textarea{
+  width:100%;
+}
