--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container">
-    <%= link_to "Copinion", '/opinions', id: "logo" %>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "一覧",   '#' %></li>
-            <li><%= link_to "生活",   '#' %></li>
-            <li><%= link_to "学業", '#' %></li>
-          </ul>
-        </nav>
-    </div>
+<header>
+  <nav class="menu">
+    <ul class="menu-inner">
+      <li><%= link_to "Copinion", '/opinions', id: "logo" %></li>
+      <li><%= link_to "一覧",   '/opinion' %></li>
+      <li><%= link_to "生活",   '#' %></li>
+      <li><%= link_to "学業", '#' %></li>
+      <li><%= link_to "進路", '#' %></li>
+      <li><%= link_to "部活", '#' %></li>
+    </ul>
+  </nav>
 </header>
