--- a/app/views/opinions/_form.html.erb
+++ b/app/views/opinions/_form.html.erb
@@ -1,36 +1,22 @@
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@newopinion) do |f| %>
-      <%= render 'shared/error_messages' %>
-      <div class="form-group">
-        <label>タイトル</label>
-        <%= f.text_field :title %>
-      </div>
-      <div class="form-group">
-        <label>カテゴリ</label><br>
-        <div class="radio-inline">
-          <label><%= f.radio_button :category, "生活", {:checked => true} %>生活</label>
-        </div>
-        <div class="radio-inline">
-          <label><%= f.radio_button :category, "学業" %>学業</label>
-        </div>
-        <div class="radio-inline">
-          <label><%= f.radio_button :category, "部活" %>部活</label>
-        </div>
-        <div class="radio-inline">
-          <label><%= f.radio_button :category, "進路" %>進路</label>
-        </div>
-        <div class="radio-inline">
-          <label><%= f.radio_button :category, "その他" %>その他</label>
-        </div>
-      </div>
-      <div class="form-group">
+<div class="form">
+  <%= form_for(@newopinion) do |f| %>
+    <%= render 'shared/error_messages' %>
+    <div class="form-group">
+      <label>タイトル</label>
+      <%= f.text_field :title %>
+    </div>
+    <div class="form-group">
+        <label>カテゴリ</label>
+        <label><%= f.radio_button :category, "生活", {:checked => true} %>生活</label>
+        <label><%= f.radio_button :category, "学業" %>学業</label>
+        <label><%= f.radio_button :category, "部活" %>部活</label>
+        <label><%= f.radio_button :category, "進路" %>進路</label>
+        <label><%= f.radio_button :category, "その他" %>その他</label>
+    </div>
+    <div class="form-group">
         <label>本文</label>
         <%= f.text_area :text %>
-      </div>
-      
-
-      <%= f.submit "投稿する", class: "btn btn-primary" %>
-    <% end %>
-  </div>
+    </div>
+    <%= f.submit "投稿する", class: "btn btn-primary" %>
+  <% end %>
 </div>
