--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -1,6 +1,5 @@
 <h1>意見収集</h1>
 
-<p id="notice"><%= notice %></p>
 <table>
   <thead>
     <tr>
@@ -13,17 +12,15 @@
 
   <tbody>
     <% @opinion.each do |opinion| %>
-      <tr>
-        <th><%= opinion.title %></th>
-        <td><%= opinion.category %></td>
-        <td><%= opinion.text %></td>
-        <td><%= link_to '返信', opinion %></td>
-        <td><%= link_to '修正', edit_opinion_path(opinion) %></td>
-        <td><%= link_to '消去', opinion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <tr>
+          <th><%= opinion.title %></th>
+          <td><%= opinion.category %></td>
+          <td><%= opinion.text %></td>
+          <td><%= link_to '返信', opinion_replies_path(opinion) %></td>
+          <td><%= link_to '修正', edit_opinion_path(opinion) %></td>
+          <td><%= link_to '消去', opinion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
     <% end %>
-    <%= render 'opinions/form' %>
   </tbody>
+  <%= render 'opinions/form' %>
 </table>
-
-<br>
