--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -4,8 +4,8 @@
   <thead>
     <tr>
       <th>タイトル</th>
-      <th>カテゴリ</th>
       <th>本文</th>
+      <th>操作</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,14 +13,14 @@
   <tbody>
       <tr>
         <th><%= @opinion.title %></th>
-        <td><%= @opinion.category %></td>
         <td><%= @opinion.text %></td>
       </tr>
       <% @replylist.each do |reply| %>
       <tr>
-        <td><%= reply.opinion_id %></td>
+        <td><%= reply.id %></td>
         <td><%= reply.text %></td>
-        <td>返信</td>
+        <td><%= link_to '修正', edit_opinion_reply_path(@opinion,reply) %></td>
+        <td><%= link_to '消去'%></td>
       </tr>
       <% end %>
   </tbody>
