--- a/app/views/opinions/_form.html.erb
+++ b/app/views/opinions/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="form">
-  <%= form_for(@newopinion) do |f| %>
+  <%= form_for(@opinion) do |f| %>
     <%= render 'shared/error_messages' %>
     <div class="form-group">
       <label>タイトル</label>
