--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -3,10 +3,12 @@
 <table>
   <thead>
     <tr>
-      <th>タイトル</th>
-      <th>カテゴリ</th>
-      <th>本文</th>
-      <th colspan="3"></th>
+      <th width="15%">タイトル</th>
+      <th width="5%" >カテゴリ</th>
+      <th width="40%">本文</th>
+      <th width="10%">返信数</th>
+      <th width="10%">解決</th>
+      <th width="10%">操作</th>
     </tr>
   </thead>
 
@@ -16,9 +18,11 @@
           <th><%= opinion.title %></th>
           <td><%= opinion.category %></td>
           <td><%= opinion.text %></td>
-          <td><%= link_to '返信', opinion_replies_path(opinion) %></td>
-          <td><%= link_to '修正', edit_opinion_path(opinion) %></td>
-          <td><%= link_to '消去', opinion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%=  %></td>
+          <td><%= opinion.solve = 0 ? '未解決' : '解決' %></td>
+          <td><%= link_to '返信', opinion_replies_path(opinion) %>
+          <%= link_to '修正', edit_opinion_path(opinion) %>
+          <%= link_to '消去', opinion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
     <% end %>
   </tbody>
