--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -1,24 +1,18 @@
 <h1>返信内容</h1>
-<h2><%= @opinion.title %></h2>
+<h2 style="display:inline;"><%= @opinion.title %>(<%= @opinion.category %>)</h2>
+<h3 style="display:inline;"><%= @opinion.text %></h3>
 
 <table>
   <thead>
     <tr>
-      <th>番号</th>
-      <th>本文</th>
-      <th>操作</th>
-      <th colspan="3"></th>
+      <th width="60%">返信</th>
+      <th width="10%" colspan="2">操作</th>
     </tr>
   </thead>
 
   <tbody>
-      <tr>
-        <th></th>
-        <td><%= @opinion.text %></td>
-      </tr>
       <% @replylist.each do |reply| %>
       <tr>
-        <td><%= reply.id %></td>
         <td><%= reply.text %></td>
         <td><%= link_to '修正', edit_opinion_reply_path(@opinion,reply) %></td>
         <td><%= link_to '消去', opinion_reply_path(@opinion,reply), method: :delete, data: { confirm: 'Are you sure?' }%></td>
